--- a/apps/kun/src/modules/header/index.less
+++ b/apps/kun/src/modules/header/index.less
@@ -1,7 +1,63 @@
 @import '@/style/main.less';
 @import 'hover.css';
 
-.hvr-underline-from-center::before {
-  background: var(--color-line);
-  height: 1.5px;
+.frosted {
+  backdrop-filter: blur(10px);
+
+  &::before {
+    background-color: #fff;
+    content: "";
+    height: 100%;
+    left: 0;
+    opacity: .8;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+  }
+}
+
+.kun-box {
+  position: relative;
+  background-repeat: no-repeat;
+  width: 48px;
+  height: 48px;
+  background-position: center center;
+
+  img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+  }
+
+  .eye {
+    position: absolute;
+    display: inline-block;
+    border-radius: 50%;
+    width: 13px;
+    height: 13px;
+
+    &::after {
+      position: absolute;
+      bottom: 2px;
+      right: 2px;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background: black;
+      content: '';
+    }
+
+    &.left {
+      top: 20px;
+      left: 15px;
+    }
+
+    &.right {
+
+      top: 20px;
+      left: 25px;
+    }
+  }
 }
