feat: theme config customize

--- a/apps/kun/src/style/main.less
+++ b/apps/kun/src/style/main.less
@@ -1,3 +1,4 @@
 @import (less) "tailwindcss/base";
 @import (less) "tailwindcss/components";
 @import (less) "tailwindcss/utilities";
+@import './hover.reset.less';
