feat: theme change

--- a/apps/kun/src/style/main.less
+++ b/apps/kun/src/style/main.less
@@ -2,3 +2,12 @@
 @import (less) "tailwindcss/components";
 @import (less) "tailwindcss/utilities";
 @import './hover.reset.less';
+
+
+:root {
+    --color-bg: #fff;
+}
+
+.dark {
+    --color-bg: #0d0e11;
+}
