--- a/apps/kun/src/assets/markdown/github-markdown-dark.css
+++ b/apps/kun/src/assets/markdown/github-markdown-dark.css
@@ -5,8 +5,8 @@
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     margin: 0;
-    color: #e6edf3;
-    background-color: #0d1117;
+    /* color: #e6edf3;
+    background-color: #0d1117; */
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     font-size: 16px;
     line-height: 1.5;
