--- a/apps/kun/src/assets/markdown/github-markdown-light.css
+++ b/apps/kun/src/assets/markdown/github-markdown-light.css
@@ -4,8 +4,8 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #1F2328;
-  background-color: #ffffff;
+  /* color: #1F2328;
+  background-color: #ffffff; */
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
   line-height: 1.5;
