--- a/apps/kun/src/modules/header/index.less
+++ b/apps/kun/src/modules/header/index.less
@@ -22,59 +22,14 @@
   backdrop-filter: blur(10px);
 
   &::before {
-    background-color: #fff;
+    background-color: var(--color-bg);
     content: "";
     height: 100%;
     left: 0;
-    opacity: .8;
+    opacity: .6;
     position: absolute;
     top: 0;
     width: 100%;
     z-index: -1;
-  }
-}
-
-.kun-box {
-  position: relative;
-  background-repeat: no-repeat;
-  width: 48px;
-  height: 48px;
-  background-position: center center;
-
-  img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-  }
-
-  .eye {
-    position: absolute;
-    display: inline-block;
-    border-radius: 50%;
-    width: 13px;
-    height: 13px;
-
-    &::after {
-      position: absolute;
-      bottom: 2px;
-      right: 2px;
-      width: 5px;
-      height: 5px;
-      border-radius: 50%;
-      background: black;
-      content: '';
-    }
-
-    &.left {
-      top: 19px;
-      left: 14px;
-    }
-
-    &.right {
-
-      top: 19px;
-      left: 24px;
-    }
   }
 }
