--- a/apps/kun/src/modules/header/index.less
+++ b/apps/kun/src/modules/header/index.less
@@ -2,21 +2,21 @@
 @import 'hover.css';
 
 
-.current {
-  position: relative;
+// .current {
+//   position: relative;
 
-  &::after {
-    content: '';
-    position: absolute;
-    width: 4px;
-    bottom: -4px;
-    height: 4px;
-    background: #000;
-    border-radius: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-}
+//   &::after {
+//     content: '';
+//     position: absolute;
+//     width: 4px;
+//     bottom: -4px;
+//     height: 4px;
+//     background: #000;
+//     border-radius: 50%;
+//     left: 50%;
+//     transform: translateX(-50%);
+//   }
+// }
 
 .frosted {
   backdrop-filter: blur(10px);
@@ -26,9 +26,9 @@
     content: "";
     height: 100%;
     left: 0;
-    opacity: .6;
+    opacity: .7;
     position: absolute;
-    top: 0;
+    top: 0.8;
     width: 100%;
     z-index: -1;
   }
