--- a/apps/kun/src/style/main.less
+++ b/apps/kun/src/style/main.less
@@ -6,8 +6,40 @@
 
 :root {
     --color-bg: #fff;
+    --color-text: #000;
+    --color-border: #E5E7EB;
 }
 
 .dark {
     --color-bg: #0d0e11;
+    --color-text: #fff;
+    --color-border: #52525b;
+}
+
+ul.pagination {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+
+    li {
+        margin-right: 4px;
+
+        a {
+            line-height: 1;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 4px;
+            width: 24px;
+            height: 24px;
+            font-size: 1rem;
+        }
+
+        &.active a {
+            color: #fff;
+            background-color: rgb(26 86 219 / var(--tw-bg-opacity));
+        }
+
+    }
 }
