--- a/apps/kun/src/assets/markdown/github-markdown-dark.css
+++ b/apps/kun/src/assets/markdown/github-markdown-dark.css
@@ -8,7 +8,7 @@
     /* color: #e6edf3;
     background-color: #0d1117; */
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.5;
     word-wrap: break-word;
   }
