--- a/apps/kun/src/assets/markdown/github-markdown-light.css
+++ b/apps/kun/src/assets/markdown/github-markdown-light.css
@@ -7,7 +7,7 @@
   /* color: #1F2328;
   background-color: #ffffff; */
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.5;
   word-wrap: break-word;
 }
