fix: footer module recovery

--- a/apps/kun/src/modules/post/index.less
+++ b/apps/kun/src/modules/post/index.less
@@ -21,6 +21,16 @@
     font-weight: 500;
     border-bottom: 0;
     position: relative;
+    margin-top: 48px;
+  }
+
+  p {
+    margin-bottom: 24px;
+  }
+
+  ul,
+  ol {
+    list-style: inherit;
   }
 }
 
